<resources>
    <string name="app_name">ESportsPlayerFinder</string>
    <string name="action_settings">Settings</string>
    <string name="dashboard_menu">Dashboard Menu</string>
    <string name="Empty_String"></string>
    <string name="welcome_sign"><b>Welcome to \n eSports Player Finder</b></string>
    <string name="friends_list_title"><b><u>Friends List</u></b></string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>

    <string name="login">Login</string>
    <string name="Authenticate">Authenticate</string>
    <string name="register">Register</string>

    <string name="new_user_question">New user? <u>Register</u></string>
    <string name="existing_user_question">Existing user? <u>Login</u></string>
    <string name="dash_Menu">dash_Menu</string>

    <string name="change_Username">New Username</string>
    <string name="change_Password">New Password</string>
    <string name="change_Email">New Email</string>
    <string name="buttonSet">Set</string>
    <string name="setgamerole">Set Game Role</string>
    <string name="spinner_title">Choose Game</string>

    <string name="createTeamtxt">Create New Team:</string>
    <string name="createtxt">Create</string>
    <string name="joinTeamtxt">Join</string>
    <string name="joinExistingTeamtxt">Join Existing Team:</string>
    <string name="nextPage">Next</string>
    <string name="prevPage">Prev</string>

    <string name="teamNameHinttxt">Team Name</string>
    <string name="teamGameHinttxt">Team Game</string>
    <string name="teamDescriptiontxt">Team Description</string>
    <string name="teamDiscordIDtxt">Team Discord Channel Code</string>

    <string name="myTeamstxt">Teams:</string>
    <string name="detailstxt">Details</string>

</resources>